# exercism-python

./: .pylintrc  pyproject.toml
LSR_Manager.app/Contents/: Info.plist
python/: .pylintrc
python/acronym/: acronym.py
python/all-your-base/: all_your_base.py
python/allergies/: allergies.py
python/anagram/: anagram.py
python/armstrong-numbers/: armstrong_numbers.py
python/atbash-cipher/: atbash_cipher.py
python/binary-search/: binary_search.py
python/binary-search-tree/: binary_search_tree.py
python/black-jack/: black_jack.py
python/bob/: bob.py
python/book-store/: book_store.py
python/bottle-song/: bottle_song.py
python/bowling/: bowling.py
python/card-games/: lists.py
python/cater-waiter/: sets.py
python/chaitanas-colossal-coaster/: list_methods.py
python/change/: change.py
python/circular-buffer/: circular_buffer.py
python/clock/: clock.py
python/collatz-conjecture/: collatz_conjecture.py
python/complex-numbers/: complex_numbers.py
python/connect/: connect.py
python/crypto-square/: crypto_square.py
python/currency-exchange/: exchange.py
python/darts/: darts.py
python/diamond/: diamond.py
python/difference-of-squares/: difference_of_squares.py
python/dnd-character/: dnd_character.py
python/dominoes/: dominoes.py
python/eliuds-eggs/: eliuds_eggs.py
python/ellens-alien-game/: classes.py
python/etl/: etl.py
python/flatten-array/: flatten_array.py
python/food-chain/: food_chain.py
python/forth/: forth.py
python/ghost-gobble-arcade-game/: arcade_game.py
python/gigasecond/: gigasecond.py
(+205 files in other folders)
